...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: const CustomTopBar(
        title: 'Novo orçamento',
        showBackButton: true,
      ),
      body: SafeArea(
        child: SingleChildScrollView(
          padding: EdgeInsets.all(16.w),
          child: Column(
...
                budgetValue: 0.0,
                selectedProductsCount: 0,
              ),
              const SizedBox(height: 12),
              const SchoolCensus(
                leadingIcon: Icon(Icons.school, color: Colors.black54),
                title: 'Censo Escolar',
                info1: '7 turmas',
                info2: '2000 alunos',
              ),
              const SizedBox(height: 12),
              ProductCategory(
                categoryIcon:
...
