...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: const CustomTopBar(
        title: 'Censo escolar',
        showBackButton: true,
      ),
      body: SafeArea(
        child: Observer(
          builder: (context) {
            if (_store.isLoading) {
...
